--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,12 @@ body {
 
 .nav-rule {
 	width: .08%;
-	height: 100%;
-	display: block;
+	/*height: 100%;*/
+	height: 80px;
+	display: inline-block;
 	float: left;
-	background-color: rgba(255,255,255,1);
+	/*background-color: rgba(255,255,255,1);*/
+	background-color: red;
 }
 
 .dropdown:hover .dropdown-menu {
