--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ h1 {
 	line-height: 50px;
 	font-weight: 600;
 }
-
 h2 {
 	font-size: 22px;
 	font-weight: 500;
@@ -109,12 +108,35 @@ h2 {
 	color: #eb0478;
 	padding-top: 4px;
 }
-
+h3 {
+	font-size: 32px;
+	color: #eb0478;
+	font-weight: 500;
+	line-height: 40px;
+	padding-bottom: 20px;
+}
+h4 {
+	font: italic 700 23px/25px "abril-display",sans-serif;
+	color: #05bbff;
+}
+h5 {
+	color: #1f1f1f;
+	font-size: 21px;
+	font-weight: 600;
+	padding-bottom: 10px;
+}
+h6 {
+	color: #eb0478;
+	text-transform: uppercase;
+	font-size: 17px;
+	font-weight: 400;
+	padding-bottom: 18px;
+}
 p {
-	font-size: 19px;
+	font-size: 21px;
 	line-height: 32px;
 	padding: 0 0 38px 0;
-	font-weight: 400;
+	font-weight: 300;
 	color: #524F4F;
 }
 
