--- a/css/style.css
+++ b/css/style.css
@@ -80,31 +80,18 @@ body {
 	background: #fff;
 }
 
-/* REGION HERO */
-
-.region-hero {
-	background-image: url("../images/FPO-region-northern-hero-bg.jpg");
-	background-size: cover;
-}
-
-.container-fluid.article {
-	height: 800px;
-	width: 90%;
-}
-
-
 /* General Styles */
 
 h1 {
 	text-transform: uppercase;
 	font-size: 52px;
-	line-height: 50px;
+	line-height: 49px;
 	font-weight: 600;
 }
 h2 {
 	font-size: 22px;
 	font-weight: 500;
-	line-height: 26px;
+	line-height: 34px;
 	color: #eb0478;
 	padding-top: 4px;
 }
@@ -150,6 +137,25 @@ p {
 
 .article .row {
 	padding-top: 60px;
+}
+
+/* Region hero */
+
+.region-hero {
+	background-image: url("../images/FPO-region-northern-hero-bg.jpg");
+	background-size: cover;
+}
+
+.container-fluid.article {
+	width: 90%;
+}
+
+/* Blog Post Styles */
+
+.bg-img-container-wrap#nrthrn-blog-post {
+	background-image: url("../images/FPO_Brandi_BG_img.jpg");
+	background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 
 /* Navigation Styles*/
