--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,16 @@ body {
 
 /* DROPDOWN */
 
+/* whole nav has bonus 1px height*/
 .sticky-nav {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	height: 44px; 
 	z-index: 5000!important;
 	box-shadow: 0 7px 8px rgba(0,0,0,.12);
 	text-align: center;
+	font-family: 'Brandon Grotesque', sans-serif;
 }
 
 .sticky-nav:after {
@@ -52,22 +55,42 @@ body {
 	background-color: rgba(5,187,255,1);
 	background-blend-mode: screen;
 	background-size: 100%;
-	padding: 8px;
 	margin: 0;
+	padding: 0;
 	font-family: 'Brandon Grotesque', sans-serif;
 	font-weight: 900;
 	font-size: 20px;
+	line-height: 44px;
+}
+
+.sticky-nav .btn:hover {
+	background-attachment: none;
+	color: rgba(255,255,255,1);
 }
 
 .nav-nca {
 	background-image: url("../images/FPO_NCA.jpg");
 }
+
+.nav-nca:hover {
+	background-image: none;
+}
+
 .nav-cca {
 	background-image: url("../images/FPO_CCA.jpg");
 }
+
+.nav-cca:hover {
+	background-image: none;
+}
+
 .nav-sca {
 	background-image: url("../images/FPO_SCA.jpg");
 	background-position: 0px 200px;
+}
+
+.nav-sca:hover {
+	background-image: none;
 }
 
 .nav-explore {
@@ -78,14 +101,15 @@ body {
 
 .nav-rule {
 	width: .08%;
-	/*height: 100%;*/
-	height: 80px;
+	height: 45px;
 	display: inline-block;
 	float: left;
-	/*background-color: rgba(255,255,255,1);*/
-	background-color: red;
+	background-color: rgba(255,255,255,1);
 }
 
+.dropdown:hover {
+	color: rgba(255,255,255,1);
+}
 .dropdown:hover .dropdown-menu {
 	display: block;
 }
@@ -95,8 +119,73 @@ body {
 	margin: 0;
 	border-radius: 0;
 	border: none;
+	background-color: rgba(5,187,255,1);
+	color: rgba(255,255,255,1);
+	text-align: center;
+	font-weight: 900;
+	font-size: 20px;
 }
 
+.dropdown-menu li {
+	padding: 15px 0;
+}
+
+.dropdown-menu li a {
+	color: rgba(255,255,255,1);
+}
+
+.dropdown-menu li a:hover {
+	color: rgba(0,0,0,1);
+	background-color: rgba(5,187,255,0);
+}
+
+.dropdown-menu .blogger-circle {
+	width: 50px;
+	height: 50px;
+	margin: 0 auto;
+	background-color: black;
+/*	background-image: url("../images/FPO_NCA.jpg");
+	background-size: 100%;*/
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	box-shadow: 0px 0px 0px 2px rgba(255,255,255,1);
+}
+
+.dropdown-menu li .nav-blogger {
+	font-weight: 700;
+	font-size: 22px;
+}
+
+.dropdown-menu li .blogger-name {
+	color: rgba(0,0,0,1);
+	font-weight: 300;
+	font-size: 15px;
+}
+
+.dropdown-menu .divider {
+	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
+	max-width: 80%;
+	margin: -30px 10% 0px 10%;
+	background-color: rgba(5,187,255,0);
+}
+
+.nav-progress-bar {
+	position: absolute;
+	bottom: -1px;
+	width: 100%;
+	height: 4px;
+	background-color: rgba(235,4,120,1);
+}
+
+.nav-status-bar {
+	position: absolute;
+	z-index: +1;
+	bottom: -1px;
+	width: 6.656%;
+	height: 4px;
+	background-color: rgba(250,192,221,1);
+}
 
 /* TOC */
 
@@ -165,7 +254,7 @@ p {
 }
 
 /* Navigation Styles*/
-nav {
+/*nav {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -188,37 +277,10 @@ nav {
 	color: rgba(0,0,0,1);
 }
 
-.nav-rule {
-	width: .08%;
-	height: 100%;
-	float: left;
-	z-index: +5;
-	background-color: rgba(255,255,255,1);
-}
-.nav-explore {
-	font-family: 'Brandon Grotesque', sans-serif;
-	font-weight: 500;
-	font-size: 15px;
-	letter-spacing: .5em;
-}
-.nav-progress-bar {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 4px;
-	background-color: rgba(235,4,120,1);
-}
-.nav-status-bar {
-	position: absolute;
-	z-index: +1;
-	bottom: 0;
-	width: 6.656%;
-	height: 4px;
-	background-color: rgba(250,192,221,1);
-}
+*/
 
 /* Navigation Hover Styles */
-.nav-hover-wrapper {
+/*.nav-hover-wrapper {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -241,18 +303,8 @@ nav {
 	font-size: 1.1em;
 	max-width: 80%;
 	padding: 10px 10% 0px 10%;
-}
-.nav-dropdown li {
-	padding: 20px 0px;
-	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
-}
-	/* Hover State Activations*/
-/*.nav-hover-nca {
-	display: none;
-}
-.nav-nca:hover .nav-hover-nca {
-	display: block;
 }*/
+
 
 
 /* Utility Styles*/
