--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ body {
 .dropdown:hover {
 	color: rgba(255,255,255,1);
 }
+
 .dropdown:hover .dropdown-menu {
 	display: block;
 }
@@ -124,6 +125,19 @@ body {
 	text-align: center;
 	font-weight: 900;
 	font-size: 20px;
+}
+
+.dropdown-menu li.btn {
+	margin-top: -83px;
+	background-color: rgba(5,187,255,1);
+	height: 41px;
+	padding: 0px;
+}
+
+.invisible-hover {
+	background-color: rgba(0,0,0,0);
+	height: 4px;
+	margin-top: -29px
 }
 
 .dropdown-menu li {
