--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,6 @@ ul.scroll-list {
 	font-size: 25px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	padding: 25px;
 	border-bottom: 1px solid rgba(5,187,255,1);
 }
 
@@ -520,9 +519,14 @@ ul.scroll-list {
 	font-weight: 900;
 	font-size: 50px;
 	color: rgba(235,4,120,1);
-	padding-right: 25px;
+	padding: 25px;
 	margin-right: 25px;
 	border-right: 1px solid rgba(5,187,255,1);
+}
+
+.box-header .stop-name {
+	display: block;
+	padding: 25px 0;
 }
 
 /* Utility Styles*/
