--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,7 @@ p {
 ul.scroll-list {
 	position: relative;
 	width: 100%;
+	height: 100v;
 }
 
 [class*="parallax-bg__"] {
@@ -560,8 +561,10 @@ ul.scroll-list {
 	   -moz-box-shadow: 0 10px 6px -6px rgba(0,0,0,.5);
 	        box-shadow: 0 10px 6px -6px rgba(0,0,0,.5);
 	border: 2px solid rgba(5,187,255,1);
-	margin-bottom: 100%;
+	margin-bottom: 50%;
 	float: left;
+	position: relative;
+	z-index: +1;
 }
 
 .scroll-list-box:first-of-type {
@@ -603,6 +606,56 @@ ul.scroll-list {
 	display: block;
 	padding: 25px 0;
 }
+
+/* Specific Article Styles */
+
+#article-roadtrip .container-fluid.article {
+	width: 100%;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+#article-roadtrip .col-md-12.article-head {
+	width: 90%;
+	padding-left: 30px;
+	padding-right: 30px;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+#list-roadtrip {
+	margin-top: 0px;
+}
+
+#article-roadtrip .scroll-list .col-md-6 {
+	margin-left: 5%;
+	margin-right: 5%;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: +2;
+}
+
+#roadtrip-circle {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 50%;
+	width: 800px;
+	height: 800px;
+	margin: 0 auto;
+	background-color: black;
+/*	background-image: url("../images/FPO_NCA.jpg");
+	background-size: 100%;*/
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
+	z-index: +1;
+}
+
 
 /* Utility Styles*/
 .clearfix:after {
