--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,6 @@ ul.scroll-list {
 .one-line {
 	line-height: 25px;
 }
-
 .box-header-num {
 	float: left;
 	font-weight: 900;
@@ -637,7 +636,6 @@ ul.scroll-list {
 	margin-right: 25px;
 	border-right: 1px solid rgba(5,187,255,1);
 }
-
 .box-header .stop-name {
 	display: block;
 	padding: 25px 0;
@@ -649,7 +647,6 @@ ul.scroll-list {
 	padding-bottom: 0;
 	margin-bottom: -25px;
 }
-
 #article-roadtrip .container-fluid.article {
 	width: 100%;
 	padding-left: 0px;
@@ -658,14 +655,23 @@ ul.scroll-list {
 	margin-right: 0px;
 	max-width: none;
 }
+#article-roadtrip .col-md-8 {
+	text-align: center;
+}
+#article-roadtrip .col-md-8 p {
+	text-align: center;
+	max-width: 900px;
+	display: inline-block;
+	padding-bottom: 0;
+}
 
-#article-roadtrip .col-md-12.article-head {
+/*#article-roadtrip .col-md-12.article-head {
 	width: 90%;
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-left: 5%;
 	margin-right: 5%;
-}
+}*/
 
 #list-roadtrip {
 	margin-top: 0px;
