--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	height: 44px; 
+	height: 44px;
 	z-index: 5000!important;
 	box-shadow: 0 7px 8px rgba(0,0,0,.12);
 	text-align: center;
@@ -928,7 +928,7 @@ ul.scroll-list {
 	margin-bottom: 40px;
 }
 
-/* Slideshow/Accordion Styles */ 
+/* Slideshow/Accordion Styles */
 
 .hideContentWrap {
 	background-size: cover;
@@ -1141,3 +1141,5 @@ ul.scroll-list {
      clear: both;
      height: 0;
 }
+
+/*test*/
