Photo Paths Fixed
Also made jpg of Chabot tif

--- a/css/style.css
+++ b/css/style.css
@@ -799,22 +799,22 @@ ul.scroll-list {
 	background-image: url("../images/kid-attractions/funderland2.jpg");
 }
 
-#eduvacation a .hidecontentwrap#chabot-space {
-	background-image: url("../images/eduvacation/chabot1.tif");
+#eduvacation a .hideContentWrap#chabot-space {
+	background-image: url("../images/eduvacation/chabot1.jpg");
 }
-#eduvacation a .hidecontentwrap#monterey-aquarium {
+#eduvacation a .hideContentWrap#monterey-aquarium {
 	background-image: url("../images/eduvacation/monterey1.jpg");
 }
-#eduvacation a .hidecontentwrap#academy-sciences {
+#eduvacation a .hideContentWrap#academy-sciences {
 	background-image: url("../images/eduvacation/academy-sciences1.jpg");
 }
-#eduvacation a .hidecontentwrap#exploratorium {
+#eduvacation a .hideContentWrap#exploratorium {
 	background-image: url("../images/eduvacation/exploratorium1.jpg");
 }
-#eduvacation a .hidecontentwrap#tech-museum {
+#eduvacation a .hideContentWrap#tech-museum {
 	background-image: url("../images/eduvacation/tech-museum1.jpg");
 }
-#eduvacation a .hidecontentwrap#sb-natural-history {
+#eduvacation a .hideContentWrap#sb-natural-history {
 	background-image: url("../images/eduvacation/sb-natural-history1.jpg");
 }
 
