--- a/css/style.css
+++ b/css/style.css
@@ -829,6 +829,31 @@ ul.scroll-list {
 	background-image: url("../images/must-see-parks/death-valley1.jpg");
 }
 
+#theme-parks a .hideContentWrap#seaworld {
+	background-image: url("../images/theme-parks/seaworld1.jpg");
+}
+#theme-parks a .hideContentWrap#knotts-berry {
+	background-image: url("../images/theme-parks/knotts-berry1.jpg");
+}
+#theme-parks a .hideContentWrap#magic-mountain {
+	background-image: url("../images/theme-parks/magic-mountain1.jpg");
+}
+#theme-parks a .hideContentWrap#disneyland {
+	background-image: url("../images/theme-parks/disneyland1.jpg");
+}
+#theme-parks a .hideContentWrap#legoland {
+	background-image: url("../images/theme-parks/legoland1.jpg");
+}
+#theme-parks a .hideContentWrap#castle-park {
+	background-image: url("../images/theme-parks/castle-park1.jpg");
+}
+#theme-parks a .hideContentWrap#raging-waters {
+	background-image: url("../images/theme-parks/raging-waters1.jpg");
+}
+#theme-parks a .hideContentWrap#universal {
+	background-image: url("../images/theme-parks/universal2.jpg");
+}
+
 /* Utility Styles*/
 .clearfix:after {
      visibility: hidden;
