--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,10 @@ ul.scroll-list {
 	padding: 25px 0;
 }
 
+.bold {
+	font-weight: 700;
+}
+
 /* Specific Article Styles */
 
 #article-roadtrip {
