--- a/css/style.css
+++ b/css/style.css
@@ -561,6 +561,21 @@ ul.scroll-list {
 	background-image: url(../images/Article_Roadtrip/alamy_RM_bp6amt.jpg);
 }
 
+.parallax-bg__skate {
+	background-image: url(../images/surf-skate/skate_1.jpg);
+	margin-top: 50px;
+	margin-bottom: 0px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.parallax-bg__surf {
+	background-image: url(../images/surf-skate/surf_1.jpg);
+	margin-top: 50px;
+	margin-bottom: 0px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 .scroll-list-box {
 	width: 100%;
 	background-color: rgba(255,255,255,.95);
@@ -609,7 +624,7 @@ ul.scroll-list {
 }
 .box-header .stop-name {
 	display: block;
-	padding: 25px 0;
+	padding: 25px;
 }
 
 .bold {
@@ -669,13 +684,74 @@ ul.scroll-list {
 	width: 800px;
 	height: 800px;
 	margin: 0 auto;
-/*	background-image: url("../images/FPO_NCA.jpg");
-	background-size: 100%;*/
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
 	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
 	z-index: +1;
+}
+
+#article-surf-skate {
+	padding-bottom: 0;
+	margin-bottom: -25px;
+}
+#article-surf-skate .container-fluid.article {
+	width: 100%;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	max-width: none;
+}
+#article-surf-skate .col-md-8 {
+	text-align: center;
+}
+
+#article-surf-skate .col-md-8.col-md-offset-2 p {
+	text-align: center;
+	max-width: 900px;
+	display: inline-block;
+	padding-bottom: 0;
+}
+
+#article-surf-skate .box-header {
+	display: block;
+	padding: 25px;
+}
+
+#article-surf-skate .box-header .best-for {
+	font-size: 20px;
+	font-weight: 900;
+	text-transform: none;
+}
+
+.list-surf-skate {
+	padding-bottom: 30%;	
+}
+
+#article-surf-skate .scroll-list .col-md-6 {
+	position: absolute;
+}
+
+#article-surf-skate .scroll-list-box p {
+	padding: 25px;
+}
+
+#article-surf-skate{
+	width: 100%;
+	margin-left: 5px;
+}
+
+.skate-list {
+	position: relative;
+	overflow: hidden;
+}
+
+.static-list {
+	position: fixed;
+	top: 0;
+	left: 0;
+	overflow-y: scroll;
 }
 
 /* Slideshow/Accordion Styles */ 
