Arrow icon SVG created
+ Caption styles started in Pattie’s section.

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html, body {
 
 body {
 	font-family: 'Brandon Grotesque', sans-serif;
+	overflow-x: hidden;
 }
 
 /* MAIN HERO */
@@ -531,6 +532,37 @@ a:hover {
 .bg-img-container-wrap#sthrn-blog-post {
 	background-image: url("../images/FPO_Brandi_BG_img.jpg");
 }
+
+/* Arrow Icon SVG Styles */
+
+.arrow circle {
+	fill:#FFF845;
+}
+
+/* Caption/SVG Styles */
+
+.caption {
+	margin-top: 25px;
+}
+.caption svg {
+	width: 25px;
+	height: auto;
+	float: left;
+	margin-right: 8px;
+}
+.caption h5 {
+	color: #eb0478;
+	padding-top: 5px;
+}
+.caption p {
+	clear: both;
+	color: #474747;
+	font-size: 18px;
+	line-height: 24px;
+	margin-top: -4px;
+}
+
+/*.st0{fill:#FFF845;}*/
 
 /* Section Header Styles*/
 .section-marker {
