Scroll Down functionality stabilized
Need to build scrolling back up functionality and find photos for loop
generated

--- a/css/style.css
+++ b/css/style.css
@@ -623,18 +623,17 @@ ul.scroll-list {
 	background-image: url(../images/Article_Roadtrip/alamy_RM_bp6amt.jpg);
 }
 
-.parallax-bg__skate {
-	background-image: url(../images/surf-skate/skate_1.jpg);
-	margin-top: 50px;
-	margin-bottom: 0px;
-	overflow-y: scroll;
-	overflow-x: hidden;
-}
 .parallax-bg__surf {
 	background-image: url(../images/surf-skate/surf_1.jpg);
 	margin-top: 50px;
 	margin-bottom: 0px;
-	overflow-y: scroll;
+	overflow: hidden;
+}
+
+.parallax-bg__skate {
+	background-image: url(../images/surf-skate/skate_1.jpg);
+	margin-bottom: 0px;
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 
@@ -790,10 +789,23 @@ ul.scroll-list {
 	overflow: hidden;
 }
 
+.surf-skate-title {
+	text-align: center;
+	position: absolute;
+	top: 45px;
+	left: 25%;
+	transform: translateX(-50%);
+	font-size: 20px;
+	color: rgba(5,187,255,1);
+}
+
+.surf-skate-title-accent {
+	text-transform: capitalize;
+	font-weight: 700;
+}
+
 .static-list {
 	position: fixed;
-	top: 0;
-	left: 0;
 	overflow-y: scroll;
 }
 
