--- a/css/style.css
+++ b/css/style.css
@@ -723,19 +723,25 @@ ul.scroll-list {
 	z-index: +2;
 }
 
-.roadtrip-circle {
+.circle-container {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%) !important;
-	left: 50%;
-	width: 800px;
-	height: 800px;
-	margin: 0 auto;
+	left: 45%;
+	width: 50%;
+	z-index: +1;
+}
+
+.roadtrip-circle {
+	display: block;
+	background-size: cover;
+	width: 100%;
+	height: 0;
+	padding: 50% 0;
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
 	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
-	z-index: +1;
 }
 
 #article-surf-skate {
