--- a/css/style.css
+++ b/css/style.css
@@ -525,15 +525,11 @@ a.read-more {
   max-width: 1400px;
 	margin: 0 auto;
 	padding-left: 15px;
-	margin-bottom: -8px;
+	margin-bottom: -5px;
 	text-transform: uppercase;
 	font-size: 18px;
 	font-weight: 500;
 	letter-spacing: .5px;
-}
-.container-fluid.article {
-	width: 90%;
-	max-width: 1400px;
 }
 .container-fluid.article.blogger-post h1,
 .container-fluid.article.blogger-post h2 {
@@ -544,14 +540,12 @@ a.read-more {
 }
 .container-fluid.article.blogger-post img {
 	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
-}
-.blogger-info-box {
-	max-width: 750px;
-	margin-bottom: 80px;
-	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
-}
-.container-fluid.article.blogger-post img {
 	margin-bottom: 40px;
+}
+.container-fluid.article.blogger-post img.blogger-info-box {
+	max-width: 750px;
+	margin-bottom: 60px;
+	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
 }
 .container-fluid.article.blogger-post .col-md-offset-1 {
 	margin-left: 4%;
@@ -589,13 +583,15 @@ a.read-more {
 /* Caption/SVG Styles */
 
 .caption {
-	margin-top: 20px;
+	margin-top: -20px;
 }
+
 .caption svg {
 	width: 25px;
 	height: auto;
 	float: left;
-	margin-right: 8px;
+	margin-bottom: 8px;
+	margin-top: 20px;
 }
 .caption h5 {
 	color: #eb0478;
@@ -604,10 +600,27 @@ a.read-more {
 .caption p {
 	clear: both;
 	color: #474747;
-	font-size: 18px;
-	line-height: 24px;
+	font-size: 17px;
+	line-height: 19px;
 	margin-top: -4px;
 	max-width: 400px;
+	padding: 0;
+}
+.caption p.cred,
+.caption .inline {
+	color: #A9A7A7;
+	text-transform: uppercase;
+	font-size: 12px;
+	letter-spacing: 1px;
+	padding-top: 12px;
+	margin-bottom: 20px;
+}
+.caption .inline {
+	margin-left: 8px;
+}
+.caption p.inline {
+	padding-top: 0;
+	margin-left: 0;
 }
 
 /*.st0{fill:#FFF845;}*/
