--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,10 @@ body {
 	position: absolute;
 	z-index: +1;
 	bottom: -1px;
-	width: 6.656%;
+	width: 0%;
 	height: 4px;
 	background-color: rgba(250,192,221,1);
+	transition: all 2s ease;
 }
 
 /* TOC */
